--- a/package.json
+++ b/package.json
@@ -4,30 +4,49 @@
   "description": "mix-form",
   "license": "MIT",
   "repository": "",
-  "author": "",
+  "author": "concefly",
   "keywords": [
-    ""
+    "react",
+    "antd",
+    "form",
+    "MixForm"
   ],
   "scripts": {
     "clean": "rimraf lib && rimraf coverage && rimraf .nyc_output && rimraf lib_test",
     "test": "npm run clean && nyc --exclude \"**/*-spec.js\" ava \"**/*-spec.js\" --verbose",
     "coverage": "nyc report --reporter=lcov --reporter=text --reporter=html",
+    "build": "rimraf dist && webpack --config webpack.prod.config.js",
+    "demo": "webpack-dev-server",
     "watch:test": "npm run test -- --watch"
   },
   "dependencies": {
-    "antd": "^2.12.6"
+    "antd": "^2.12.6",
+    "qrcode.react": "^0.7.1"
   },
   "devDependencies": {
     "ava": "^0.20.0",
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "copy-webpack-plugin": "^4.0.1",
     "coveralls": "^2.0.0",
+    "css-loader": "^0.28.4",
     "enzyme": "^2.9.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "nyc": "^10.0.0",
+    "pre-commit": "^1.2.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
     "react-test-renderer": "^15.6.1",
-    "rimraf": "^2.0.0"
+    "rimraf": "^2.6.1",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   },
   "engines": {
     "node": ">=6.0.0"
@@ -37,5 +56,8 @@
       "babel-register"
     ],
     "babel": "inherit"
-  }
+  },
+  "pre-commit": [
+    "build"
+  ]
 }
